--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "flag-icons": "^6.6.6",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-lang-code-flags": "^1.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
